# ai-bootcamp

./: .gitignore  .pre-commit-config.yaml  Makefile  instruction.md  instructions.md
.claude/agents/: rust-system-architect.md
.claude/commands/: deep-review.md
.cursor/commands/: commit.md
.cursor/rules/: rust-besr-practices.mdc  specify-rules.mdc  style.md
.github/workflows/: ci.yml  pre-commit.yml
.specify/memory/: constitution.md
docs/: muzli-design.md  ugmonk-web-design.md
specs/001-db-query/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-db-query/checklists/: requirements.md
specs/001-db-query/contracts/: tauri-commands.md
specs/002-mysql-support/: data-model.md  plan.md  spec.md  tasks.md
specs/w1/: 0001-spec.md  CORS_FIX.md  FRONTEND_PHASE3_COMPLETE.md  PHASE1_COMPLETE.md  PRE_COMMIT_MIGRATION.md  PRE_COMMIT_SETUP_COMPLETE.md  UI_OPTIMIZATION_COMPLETE.md  instructions.md
specs/w2/: instructions.md
specs/w3/: instructions.md
w1-project-alpha/: .gitignore  .pre-commit-config.yaml  FRONTEND_PHASE1_COMPLETE.md  PHASE1_COMPLETE.md  PHASE2_COMPLETE.md  PROJECT_STATUS.md  instructions.md
w1-project-alpha/.github/workflows/: ci.yml  pre-commit.yml
w1-project-alpha/backend/: API_REFERENCE.md  Cargo.toml  env.example  run_tests.sh
w1-project-alpha/backend/migrations/: 20231201000001_initial_schema.sql  seed.sql
w1-project-alpha/backend/src/: lib.rs  main.rs
w1-project-alpha/backend/src/config/: mod.rs
w1-project-alpha/backend/src/handlers/: mod.rs  tag_handler.rs  ticket_handler.rs
w1-project-alpha/backend/src/models/: mod.rs  tag.rs  ticket.rs
w1-project-alpha/backend/src/repositories/: mod.rs  tag_repository.rs  ticket_repository.rs
w1-project-alpha/backend/src/routes/: mod.rs
w1-project-alpha/backend/src/services/: mod.rs
w1-project-alpha/backend/src/utils/: error.rs
w1-project-alpha/backend/tests/: README.md  README_TEST.md  api-test.rest  integration_test.rs
w1-project-alpha/frontend/: .prettierignore  eslint.config.js  package-lock.json  package.json  tailwind.config.js
w1-project-alpha/frontend/src/: App.css  App.tsx  index.css
w1-project-alpha/frontend/src/components/: FilterPanel.tsx  SearchBar.tsx  Sidebar.tsx  TagBadge.tsx  TagManager.tsx  TagSelector.tsx  TicketCard.tsx  TicketForm.tsx
w1-project-alpha/frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx  dialog.tsx  input.tsx  label.tsx  select.tsx  textarea.tsx  toast.tsx
w1-project-alpha/frontend/src/hooks/: use-toast.ts
w1-project-alpha/frontend/src/lib/: utils.ts
w1-project-alpha/frontend/src/pages/: TicketsPage.tsx
w1-project-alpha/frontend/src/services/: api.ts
w1-project-alpha/frontend/src/stores/: index.ts  tagStore.ts  ticketStore.ts  uiStore.ts
w1-project-alpha/frontend/src/types/: index.ts
w1-project-alpha/specs/: 0001-spec.md  0002-implementation-plan.md  FRONTEND_PHASE2_COMPLETE.md  PHASE3_COMPLETE.md  QUICKSTART_PRE_COMMIT.md  README_PRE_COMMIT.md
w2-db-query/: .env.example  .gitignore  .playwright-mcp.config.json  CODE_REVIEW.md  Makefile  PLAYWRIGHT_E2E_TESTING.md  PLAYWRIGHT_MCP_SETUP.md  TESTING.md  package-lock.json  package.json  playwright.config.ts  vite.config.ts
w2-db-query/src/: App.tsx
w2-db-query/src-tauri/: Cargo.toml  TEST_README.md  tauri.conf.json
w2-db-query/src-tauri/src/: lib.rs  main.rs
w2-db-query/src-tauri/src/commands/: ai.rs  database.rs  metadata.rs  mod.rs  query.rs
w2-db-query/src-tauri/src/commands/__tests__/: query_helpers.rs
w2-db-query/src-tauri/src/models/: database.rs  metadata.rs  mod.rs  query.rs
w2-db-query/src-tauri/src/services/: ai_service.rs  cache_service.rs  metadata_service.rs  mod.rs  mysql_service.rs  postgres_service.rs  query_parser.rs
w2-db-query/src-tauri/src/utils/: config.rs  error.rs
w2-db-query/src-tauri/tests/: README.md  commands_test.rs  integration_test.rs
w2-db-query/src/components/: AddDatabaseDialog.tsx  DatabaseCard.tsx  Layout.tsx  LoadingIndicator.tsx  MetadataTree.tsx  NLQueryInput.tsx  QueryResultTable.tsx  SqlEditor.tsx
w2-db-query/src/components/__tests__/: DatabaseCard.test.tsx  LoadingIndicator.test.tsx
w2-db-query/src/hooks/: useDatabases.ts  useMetadata.ts  useQuery.ts
w2-db-query/src/hooks/__tests__/: useQuery.test.ts
w2-db-query/src/pages/: DatabaseExplorer.tsx  DatabaseList.tsx  QueryEditor.tsx
w2-db-query/src/services/: api.ts  types.ts
w2-db-query/src/styles/: globals.css
w2-db-query/src/test/: setup.ts
w2-db-query/tests/e2e/: CHANGELOG.md  README.md  database-explorer.spec.ts  database-list.spec.ts  fixtures.ts  global-setup.ts  global-teardown.ts  index.html  natural-language-query.spec.ts  navigation.spec.ts  query-editor.spec.ts
w2-db-query/tests/e2e/helpers/: mock-tauri.ts  setup.ts
