[package]
name = "project-alpha-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web框架
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# 异步运行时
tokio = { version = "1.35", features = ["full"] }

# 数据库
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "migrate"] }

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 错误处理
thiserror = "1.0"
anyhow = "1.0"

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# UUID
uuid = { version = "1.6", features = ["v4", "serde"] }

# 时间处理
chrono = { version = "0.4", features = ["serde"] }

# 环境配置
dotenvy = "0.15"

# 验证
validator = { version = "0.16", features = ["derive"] }
