[package]
name = "project-alpha-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web框架
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# 异步运行时
tokio = { version = "1.40", features = ["full"] }

# 数据库
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "migrate"] }

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 错误处理
thiserror = "1.0"
anyhow = "1.0"

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# UUID
uuid = { version = "1.10", features = ["v4", "serde"] }

# 时间处理
chrono = { version = "0.4", features = ["serde"] }

# 环境配置
dotenvy = "0.15"

# 验证
validator = { version = "0.18", features = ["derive"] }

[dev-dependencies]
# HTTP 客户端（用于集成测试）
reqwest = { version = "0.12", features = ["json"] }
# 测试工具
tokio-test = "0.4"
# 用于创建全局静态变量的工具
once_cell = "1.19"
