[package]
name = "w2-db-query"
version = "0.1.0"
description = "数据库查询工具 - PostgreSQL 数据库连接和查询桌面应用"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "w2_db_query_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "with-uuid-1"] }
rusqlite = { version = "0.38", features = ["bundled"] }
sqlparser = "0.60"
async-openai = "0.32.3"
uuid = { version = "1.19", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
base64 = { version = "0.22", default-features = false, features = ["std"] }

[dev-dependencies]
tempfile = "3.12"

[features]
testcontainers = ["dep:testcontainers"]

[dependencies.testcontainers]
version = "0.15"
optional = true
